# etr

./: .pre-commit-config.yaml  example-config.yaml  pyproject.toml
src/etr/: cli.py  settings.py
src/etr/config/: __init__.py
src/etr/config/models/: base.py  datasources.py  root.py
