[tool.poetry]
name = "etr"
version = "0.1.0"
description = ""
authors = ["Antoine Delannoy <antoine.j.m.delannoy@gmail.com>"]
readme = "README.md"
packages = [{include = "etr", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
